Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,12 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def locals_stay_local():\n",
-    "    printtrapped = 'not escaping'"
+    "    print(trapped = 'not escaping')"
    ]
   },
   {
