--- a/index.ipynb
+++ b/index.ipynb
@@ -207,19 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def locals_stay_local():\n",
-    "    trapped = 'not escaping'"
+    "    trapped = 'not escaping'\n",
+    "    print(trapped)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not escaping\n"
+     ]
+    }
+   ],
    "source": [
     "locals_stay_local()"
    ]
